--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require": {
     "php": ">=5.6.0",
     "filp/whoops": "^2.1",
-    "patricklouys/http": "^1.3"
+    "patricklouys/http": "^1.3",
+    "nikic/fast-route": "^0.8.0"
   },
   "autoload": {
     "psr-4": {
