Add prefix to routes to work with Apache24. No reason found.

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,6 @@
-DirectoryIndex index.html
-
 RewriteEngine on
 
-
 RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_URI} !-f
-RewriteRule .* index.php [QSA,L]
+RewriteCond %{DOCUMENT_ROOT}/%{REQUEST_URI} !-d
+RewriteRule ^go/.*$ index.php [QSA,L]
+
