--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
     }
   },
   "require-dev": {
-    "behat/behat": "^3.1"
+    "behat/behat": "^3.1",
+    "behat/mink": "^1.7",
+    "behat/mink-goutte-driver": "^1.2",
+    "behat/mink-selenium2-driver": "^1.3"
   }
 }
