--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "behat/behat": "^3.1",
     "behat/mink": "^1.7",
     "behat/mink-goutte-driver": "^1.2",
-    "behat/mink-selenium2-driver": "^1.3"
+    "behat/mink-selenium2-driver": "^1.3",
+    "phpspec/phpspec": "^2.5"
   }
 }
